2002-12-23  Artis Trops  <hornet@navigator.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS.

2002-11-12  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c (set_white_bg): Don't leak the style.
	
2002-11-09  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" (Tamil) language to the languages' list.

2002-10-01  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.in: Added cs to ALL_LINGUAS.

Thu Sep 19 14:30:31 2002  Owen Taylor  <otaylor@redhat.com>

	* memintercept-utils.c (mi_atomic_[increment/decrement]): Fix
	wrong in the non-atomic fallback case. (#93670, 
	Christian Marillat)

2002-09-10  James Henstridge  <james@daa.com.au>

	* server.c (find_lib_location): variable definitions need to go at
	the top of the function.

Thu Sep  5 14:54:33 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am server.c: Move libmemintercept.so into
	/usr/lib/memprof.

	* Makefile.am main.c server.[ch]: Add options for 
	turning on and controlling speed profiling, install
	'speedprof' as a symlink, change behavior when
	run as speedprof.
	
	* memprof.glade main.c: Hide the leak detection
	UI when in 'speedprof' mode.

	* memintercept.c intercept.[ch]: Move the intercept-library
	stuff that is shared between memory and speed profiling
	into intercept.[ch].

	* speedintercept.c: Intercept library for speed profiling.

	* memprof.h process.c: Add a MI_TIME operation.

	* mi-perfctr.[ch] perfctr.h: Speed profiling via the
	PIII performance monitoring counters and the perfctr
	driver.

	* memprof.spec: Update.

Sat Aug 31 22:24:22 2002  Kristian Rietveld  <kris@gtk.org>

	* Release 0.5.1

Wed Aug 21 19:26:24 2002  Kristian Rietveld  <kris@gtk.org>

	* memprof.glade: simple typo fix

Tue Aug 19 02:28:34 2002  Kristian Rietveld  <kris@gtk.org>

	* main.c (run_cb), (skip_add_cb), (skip_regexes_add_cb): conversion
	to GtkDialog.

	* memprof.glade (fileentry1): GnomeFileEntry in the run dialog should
	be modal, so the file selector there also responds (pointed out