@@ -1,9 +1,0 @@
-#undef PACKAGE
-#undef VERSION
-#undef ENABLE_NLS
-#undef HAVE_CATGETS
-#undef HAVE_GETTEXT
-#undef HAVE_LC_MESSAGES
-#undef HAVE_STPCPY
-#undef HAVE_BIND_TEXTDOMAIN_CODESET
-#undef GETTEXT_PACKAGE
