@@ -1,3 +1,15 @@
+Fri Jan 24 12:31:47 2003  Owen Taylor  <otaylor@redhat.com>
+
+	* bfdutils.c (find_separate_debug_file): Add support
+	for separate debug info files pointed to be 
+	.gnu.debuglink sections, as supported by current GDB.
+
+	* configure.in: Add --with-separate-debug-dir.
+
+	* acinclude.m4: AC_DEFINE_DIR()
+
+	* acconfig.h: Remove.
+
 2002-12-23  Artis Trops  <hornet@navigator.lv>
 
 	* configure.in: Added Latvian (lv) to ALL_LINGUAS.
